# ParadiseLauncher

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discord.rs  friends.rs  lib.rs  server_connection.rs  settings.rs
src/components/: ActivityStatus.css  ActivityStatus.jsx  DiscordTab.css  DiscordTab.jsx  FriendsTab.css  FriendsTab.jsx  MenuIcon.jsx  ModTab.css  ModTab.jsx  NewsTab.css  NewsTab.jsx  Notification.css  Notification.jsx  ParadiseLogo.jsx  PlayTab.css  PlayTab.jsx  ServerDialog.css  ServerDialog.jsx  SettingsTab.css  SettingsTab.jsx  Sidebar.css  Sidebar.jsx  SplashScreen.css  SplashScreen.jsx
